2007-01-02  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (name): Rename and change field type to ...
	(path): new field.
	(getPath, setPath): New methods.
	(getName, setName): Update
	(getURI): Remove method.

	* LineBufferedReader.java (readLine): Fix 3 little errors.

	* URIPath.jva: Fix bad indenttain of PreProcess directive.

2007-01-01  Per Bothner  <per@bothner.com>

	* Path.java: Fix typo.

2006-12-30  Per Bothner  <per@bothner.com>

	* Path.java (coerceToPathOrNull): New static method.
	(valueOf): Implement using coerceToPathOrNull.
	* FilePath.java (coerceToFilePathOrNull): New static method.
	(makeFilePath): Implement using coerceToFilePathOrNull.
	* URIPath.java (coerceToURIPathOrNull): New static method.
	(makeURI): Implement using coerceToURIPathOrNull.

2006-12-29  Per Bothner  <per@bothner.com>

	* URI_utils.java: Update for move of uriSchemeSpecified and
	uriSchemeLength from InPort to Path.
	* URIPath.java: Likewise.

	* Path.java: New class.
	* FilePath.java: New class, extends Path.
	* URIPath.java: New class, extends Path.
	* URLPath.java: New class, extends URIPath.
	* ResourceStreamHandler.java: New class, extends URLStreamHandler.
	* Makefile.am: Update accordingly.

	* LineInputStreamReader.java: New class, extends LineBufferedReader.
	* Makefile.am: Update accordingly.
	* LineBufferedReader.java: Extend Reader rather than FilterReader.
	This is to support LineInputStreamReader.
	(<init>): Update accordingly.
	(in): New field, rather than using inherited field.
	(close): Add required method.

	* LineBufferedReader.java (DONT_KEEP_FULL_LINES): New flag.
	(setKeepFullLines): Set/clear flag.
	(reserve): Check new flag.

2006-12-18  Per Bothner  <per@bothner.com>

	* URI_utils.java (exists): New static method.

2006-12-14  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (BUFFER_SIZE): Increase to 8192.

	* LineBufferedReader.java (incrLineNumber): New method.
